--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,33 +43,33 @@
 #hawp_google-reviews .review-date { display: block; font-size: .9em; color: #999; }
 
 
-#hm5sr .br-theme-bootstrap-stars .br-widget a {
+#hmwpgr .br-theme-bootstrap-stars .br-widget a {
   font-size:40px !important;
 }
 
 /* Google */
 
-#hm5sr .rating {
+#hmwpgr .rating {
     margin-bottom: 1em;
     padding: 0 0 1em;
     width: auto;
 }
-#hm5sr .rating span {
+#hmwpgr .rating span {
     cursor: pointer;
     float: right;
     position: relative;
 }
-#hm5sr { margin:1em auto; padding:1em 0; width:100%; }
-#hm5sr textarea { width: 100%; }
+#hmwpgr { margin:1em auto; padding:1em 0; width:100%; }
+#hmwpgr textarea { width: 100%; }
 
-#hm5sr .reviewfail {
+#hmwpgr .reviewfail {
     background: red none repeat scroll 0 0;
     color: white;
     font-family: arial;
     margin-top: 10px;
     padding: 20px;
 }
-#hm5sr .reviewsuccess {
+#hmwpgr .reviewsuccess {
     background: green none repeat scroll 0 0;
     color: white;
     font-family: arial;
@@ -77,82 +77,82 @@
     padding: 20px;
 }
 
-#hm5sr #footer-bottom {
+#hmwpgr #footer-bottom {
     background-color: #fff !important;
 }
 
-#hm5sr #footer-info, #hm5sr #footer-info a {
+#hmwpgr #footer-info, #hmwpgr #footer-info a {
     color: #959595;
 }
 
-#hm5sr .fifty {
+#hmwpgr .fifty {
     float: left;
     padding-right: 30px;
     width: 50%;
 }
-#hm5sr .email {
+#hmwpgr .email {
     float: left;
     width: 50%;
 }
-#hm5sr .registerbutton {
+#hmwpgr .registerbutton {
     border: 2px solid #2ea3f2;
     border-radius: 5px;
     height: 44px;
     padding: 11px 15px !important;
 }
-#hm5sr #main-header {
+#hmwpgr #main-header {
     background-color: #f2f2f2;
     box-shadow: none;
 }
-#hm5sr .current-menu-item {
+#hmwpgr .current-menu-item {
     border-bottom: 3px solid #ccc;
 }
-#hm5sr .menu-item {
+#hmwpgr .menu-item {
 	padding-left: 20px;
 }
-#hm5sr #logo {
+#hmwpgr #logo {
     max-height: 55%;
 }
-#hm5sr #top-menu li {
+#hmwpgr #top-menu li {
     font-size: 16px;
 }
-#hm5sr .reviewcopy {
+#hmwpgr .reviewcopy {
     background: #f7f7f7 none repeat scroll 0 0;
     border: 1px solid #ccc;
     font-style: italic;
     padding: 20px;
 }
-#hm5sr #footer-info {
+#hmwpgr #footer-info {
     text-align: center;
     width: 100%;
 }
-#hm5sr .edit-attachment {
+#hmwpgr .edit-attachment {
 	display:none;
 }
-#hm5sr #wpua-preview-existing {
+#hmwpgr #wpua-preview-existing {
 	width: 100%;
 }
-#hm5sr #wpua-thumbnail-existing, .description, #pmpro_account-profile {
+#hmwpgr #wpua-thumbnail-existing, .description, #pmpro_account-profile {
 	display: none !important;
 }
-#hm5sr #wpua-remove-button-existing, #wpua-undo-button-existing {
+#hmwpgr #wpua-remove-button-existing, #wpua-undo-button-existing {
 	float: left;
 	margin-right:10px;
 	width: auto;
 }
-#hm5sr form.pmpro_form .pmpro_submit {
+#hmwpgr form.pmpro_form .pmpro_submit {
     margin-left: 0px;
 }
-#hm5sr th {
+#hmwpgr th {
 	background: #f7f7f7 none repeat scroll 0 0;
 }
-#hm5sr #wpua-add-existing {
+#hmwpgr #wpua-add-existing {
 	margin-bottom: 26px;
 }
-#hm5sr .entry-content table, body.et-pb-preview #main-content .container table {
+#hmwpgr .entry-content table, body.et-pb-preview #main-content .container table {
     margin: 17px 0 15px;
 }
-#hm5sr .copybutton {
+#hmwpgr .copybutton {
     background: #2ea3f2 none repeat scroll 0 0 !important;
     border: 0 none;
     border-radius: 5px;
@@ -165,25 +165,25 @@
     padding: 12px 22px;
     width: 100%;
 }
-#hm5sr .updated, .wpua-edit-container h3 {
+#hmwpgr .updated, .wpua-edit-container h3 {
 	display:none;
 }
 
 
-#hm5sr .half {
+#hmwpgr .half {
 	float: left;
     margin-right: 5%;
     width: 45%;
 }
 
 
-#hm5sr .lower h2 {
+#hmwpgr .lower h2 {
     font-size: 18px !important;
     font-weight: 600px !important;
 }
 
 @media screen and (max-width: 600px) {
-#hm5sr .et_non_fixed_nav.et_transparent_nav.et_show_nav #page-container, #hm5sr .et_fixed_nav.et_show_nav #page-container {
+#hmwpgr .et_non_fixed_nav.et_transparent_nav.et_show_nav #page-container, #hmwpgr .et_fixed_nav.et_show_nav #page-container {
     padding-top: 0;
 }
 }
